--- a/website/templates/Jeu2-choix.html
+++ b/website/templates/Jeu2-choix.html
@@ -2,7 +2,7 @@
 %}
 
 <div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white">
-<header class="w3-container w3-teal">
+<header class="w3-container w3-text-white" style="background-color:{{theme_color}}">
     <h4>Choisissez un nombre</h4>
 </header>
 <form method="POST">
@@ -10,14 +10,14 @@
     {% for i in range(5) %}
     <div class="w3-cell w3-padding-small">
       {% if user["choix"] == i+1 %}
-      <div class="circle w3-xlarge w3-cell w3-cell-middle w3-grayscale" style="background-color: #bff5ea;">{{i+1}}</div>
+      <div class="circle w3-xlarge w3-cell w3-cell-middle w3-grayscale" style="background-color: #bff5ea; border:5px solid #009688;">{{i+1}}</div>
       {% else %}
-      <button type="submit" name="boutton" value={{i+1}} class="circle w3-xlarge w3-hover-opacity w3-cell w3-cell-middle" style="background-color: #bff5ea;">{{i+1}}</button>
+      <button type="submit" name="boutton" value={{i+1}} class="circle w3-xlarge w3-hover-opacity w3-cell w3-cell-middle" style="background-color: #bff5ea;  border:5px solid #009688;">{{i+1}}</button>
       {% endif %}
     </div>
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-teal">Valider</button></p>
+  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white" style="background-color:{{theme_color}}">Valider</button></p>
   </form>
 </div>
 
