--- a/website/templates/Jeu2-reveal.html
+++ b/website/templates/Jeu2-reveal.html
@@ -2,38 +2,38 @@
 %}
 <div class="w3-display-middle w3-center" style="width:500px;">
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
-    <div class="w3-card w3-margin w3-padding w3-half w3-teal" style="width:200px; height:150px;">
+    <div class="w3-card w3-margin w3-padding w3-half" style="width:200px; height:150px; background-color:{{players[0]['color']}}">
       <h3><b>{{players[0]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
-        <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[0]["choix"]}}</div>
+        <div class="circle w3-lobster w3-xxlarge w3-cell w3-display-middle w3-text-white" style="background-color:{{players[0]['secColor']}};">{{players[0]["choix"]}}</div>
       </div>
     </div>
-    <div class="w3-card w3-margin w3-padding w3-half w3-teal" style="width:200px; height:150px;">
+    <div class="w3-card w3-margin w3-padding w3-half" style="width:200px; height:150px; background-color:{{players[1]['color']}}">
       <h3><b>{{players[1]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
-        <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[1]["choix"]}}</div>
+        <div class="circle w3-lobster w3-xxlarge w3-cell w3-display-middle w3-text-white" style="background-color:{{players[1]['secColor']}};">{{players[1]["choix"]}}</div>
       </div>
     </div>
   </div>
-  <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
-    <div class="w3-card w3-margin w3-padding w3-half w3-teal" style="width:200px; height:150px;">
+  <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around; ">
+    <div class="w3-card w3-margin w3-padding w3-half" style="width:200px; height:150px; background-color:{{players[2]['color']}}">
       <h3><b>{{players[2]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
-        <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[2]["choix"]}}</div>
+        <div class="circle w3-lobster w3-xxlarge w3-cell w3-display-middle w3-text-white" style="background-color:{{players[2]['secColor']}};">{{players[2]["choix"]}}</div>
       </div>
     </div>
-    <div class="w3-card w3-margin w3-padding w3-half w3-teal" style="width:200px; height:150px;">
+    <div class="w3-card w3-margin w3-padding w3-half" style="width:200px; height:150px; background-color:{{players[3]['color']}}">
       <h3><b>{{players[3]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
-        <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[3]["choix"]}}</div>
+        <div class="circle w3-lobster w3-xxlarge w3-cell w3-display-middle w3-text-white" style="background-color:{{players[3]['secColor']}};">{{players[3]["choix"]}}</div>
       </div>
     </div>
   </div>
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
-    <div class="w3-card w3-margin w3-padding w3-teal" style="width:200px; height:150px;">
+    <div class="w3-card w3-margin w3-padding" style="width:200px; height:150px; background-color:{{players[4]['color']}}">
       <h3><b>{{players[4]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
-        <div class="circle w3-xxlarge w3-cell w3-display-middle">{{players[4]["choix"]}}</div>
+        <div class="circle w3-lobster w3-xxlarge w3-cell w3-display-middle w3-text-white" style="background-color:{{players[4]['secColor']}};">{{players[4]["choix"]}}</div>
       </div>
     </div>
   </div>
