--- a/website/templates/Jeu4-choix.html
+++ b/website/templates/Jeu4-choix.html
@@ -1,8 +1,8 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
 %}
 
-<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white">
-<header class="w3-container w3-teal">
+<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white">
+<header class="w3-container" style="background-color:{{theme_color}}">
     <h4>Choisissez un nombre</h4>
 </header>
 <form method="POST">
@@ -11,13 +11,21 @@
     <div class="w3-cell w3-padding-small">
       {% if user["choix"] == i %}
         {% if page['prize'][gameState["game4_bonus"]][i] == "star" %}
-        <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;"><i class="fa fa-star"></i></div>
+          {% if i == 3 %}
+            <div class="w3-card w3-xlarge w3-padding-small w3-light-gray w3-text-gray" style="white-space:nowrap;"><i class="fa fa-star"></i></div>
+          {% else %}
+            <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;"><i class="fa fa-star"></i></div>
+          {% endif %}
         {% else %}
         <div class="w3-card w3-xlarge w3-padding-small w3-light-gray" style="white-space:nowrap;">{{page['prize'][gameState["game4_bonus"]][i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></div>
         {% endif %}
       {% else %}
         {% if page['prize'][gameState["game4_bonus"]][i] == "star" %}
-        <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;"><i class="fa fa-star"></i></button>
+          {% if i == 3 %}
+            <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white w3-text-gray" style="white-space:nowrap;"><i class="fa fa-star"></i></button>
+          {% else %}
+            <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;"><i class="fa fa-star"></i></button>
+          {% endif %}
         {% else %}
         <button type="submit" name="boutton" value={{i}} class="w3-border-0 w3-card w3-xlarge w3-padding-small w3-hover-opacity w3-white" style="white-space:nowrap;">{{page['prize'][gameState["game4_bonus"]][i]}} <img src="/static/images/coin.png" style="width:25px" alt="Coin"></button>
         {% endif %}
@@ -25,7 +33,7 @@
     </div>
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button w3-teal">Valider</button></p>
+  <p><button type="submit" name="boutton" value="Jeu4-choix" class="w3-button" style="background-color:{{theme_color}}">Valider</button></p>
 </form>
 </div>
 
