--- a/website/templates/Jeu5-Valider.html
+++ b/website/templates/Jeu5-Valider.html
@@ -1,7 +1,7 @@
-{% extends "base-etoiles.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
+{% extends "bese.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center" style="width:350px;">
-  <header class="w3-container w3-teal">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:350px;">
+  <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>{{user["message"]}}</h4>
   </header>
   <form class="w3-container" method="POST">
