--- a/website/templates/Jeu5-proposition.html
+++ b/website/templates/Jeu5-proposition.html
@@ -1,7 +1,7 @@
-{% extends "base-etoiles.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
+{% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
-<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
-<header class="w3-container w3-teal">
+<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white" style="width:400px;">
+<header class="w3-container" style="background-color:{{theme_color}}">
     <h4>Veuillez faire une offre aux autres joueurs</h4>
 </header>
 <div class="w3-margin-right w3-margin-left" style="display:flex;">
