--- a/website/templates/Jeu5-reveal.html
+++ b/website/templates/Jeu5-reveal.html
@@ -1,7 +1,7 @@
-{% extends "base-etoiles.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
+{% extends "bese.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
 
 <div class="w3-display-middle w3-center" style="width:500px;">
-  <header class="w3-container w3-teal">
+  <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>{{user['message']}}</h4>
   </header>
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
