--- a/website/templates/base+don.html
+++ b/website/templates/base+don.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %}
-{% block inside%}
+{% extends "base+etoiles.html" %}{% block inside2%}
 
 <div class="w3-container w3-center">
 <form method="POST">
-<button type="submit" class="w3-btn w3-xlarge w3-round-large w3-red w3-margin" name="boutton" value="don">Faire un don</button>
+<button type="submit" class="w3-btn w3-xlarge w3-round-large w3-margin w3-red w3-border" name="boutton" value="don" style="width:170px">Faire un don</button>
 </form>
 </div>
 
- <div class="container">{% block content %} {% endblock %}</div>
+{% block content %} {% endblock %}
 {% endblock %}
