--- a/website/templates/don_etoiles.html
+++ b/website/templates/don_etoiles.html
@@ -1,7 +1,7 @@
 {% extends "base+don.html" %} {% block title %}Donner des étoiles{% endblock %} {% block content%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center" style="width:250px;">
-  <header class="w3-container w3-teal">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:250px;">
+  <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>À qui shouaitez-vous léguer des étoiles ?</h4>
   </header>
   <form class="w3-container" method="POST">
@@ -14,7 +14,7 @@
   </select>
   <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
   <p>
-    <button type="submit" name="boutton" value="envoyer etoile" class="w3-margin-right w3-button w3-teal">Envoyer</button>
+    <button type="submit" name="boutton" value="envoyer etoile" class="w3-margin-right w3-button" style="background-color:{{theme_color}}">Envoyer</button>
     <button type="submit" name="boutton" value="terminer" class="w3-margin-left w3-button w3-red">Terminer</button>
   </p>
   <p>
