--- a/website/templates/donner_des_etoiles.html
+++ b/website/templates/donner_des_etoiles.html
@@ -1,12 +1,12 @@
 {% extends "base+don.html" %} {% block title %}Donner des étoiles ?{% endblock %} {% block content%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center" style="width:350px;">
-  <header class="w3-container w3-teal">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:350px;">
+  <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>Shouaitez-vous léguer des étoiles ?</h4>
   </header>
   <form class="w3-container" method="POST">
   <p>
-    <button type="submit" name="boutton" value="léguer etoiles" class="w3-margin-right w3-button w3-teal" style="width:120px;">OUI</button>
+    <button type="submit" name="boutton" value="léguer etoiles" class="w3-margin-right w3-button" style="width:120px; background-color:{{theme_color}}">OUI</button>
     <button type="submit" name="boutton" value="terminer" class="w3-margin-left w3-button w3-red" style="width:120px;">C'est mort</button>
   </p>
   <p>
