--- a/website/templates/en_attente_jeu5.html
+++ b/website/templates/en_attente_jeu5.html
@@ -1,4 +1,4 @@
-{% extends "base-etoiles.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
+{% extends "bese.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-display-container w3-display-middle w3-padding">
   <h5>En attente des autres joueurs</h5>
