--- a/website/templates/faire_un_don.html
+++ b/website/templates/faire_un_don.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %} {% block title %}Faire un don{% endblock %} {% block inside%}
-{% if user["saved_flouze"] != None %}
+{% extends "base+etoiles.html" %} {% block title %}Faire un don{% endblock %} {% block inside2%}
+{% if user["saved_flouze"] != 0 %}
 <h2 class="w3-text-white w3-teal w3-padding-large" style="position:absolute; top:50px; right:0px">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
 {% endif %}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center" style="width:220px;">
-  <header class="w3-container w3-teal">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:250px;">
+  <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>Faire un don</h4>
   </header>
   <form class="w3-container" method="POST">
@@ -16,7 +16,10 @@
   <option value=3>{{players[user['otherPlayers'][3]]["name"]}}</option>
   </select>
   <input name="montant" class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" type="number" style="width:120px; display:inline-block;">
-  <p><button type="submit" name="boutton" value="envoyer don" class="w3-button w3-teal">Envoyer</button></p>
+  <p>
+    <button type="submit" name="boutton" value="en fait non" class="w3-button w3-margin-right w3-red">en fait non</button>
+    <button type="submit" name="boutton" value="envoyer don" class="w3-button" style="background-color:{{theme_color}}">Envoyer</button>
+  </p>
   <p>
 </form>
   </div>
