--- a/website/templates/monitoring.html
+++ b/website/templates/monitoring.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     </style>
+    <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type = "image/x-icon">
     <title>Flouze-Admin</title>
   </head>
 <body>
   <div class="container" style="display:flex; justify-content:space-around;">
-    <div class="container w3-lime w3-center w3-margin" style="flex-grow:1;">
+    <div class="container w3-center w3-margin" style="flex-grow:1; background-color:{{players[0]['color']}}">
       <p class="w3-xlarge"><b>{{players[0]["name"]}}</b></p>
       <p class="w3-xlarge"><i class="fa fa-star"> {{players[0]["stars"]}}</i></p>
       <p class="w3-xlarge">{{players[0]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
@@ -19,7 +20,7 @@
       <p class="w3-large">{{players[0]["message"]}}</p>
       <p class="w3-large">{{players[0]["done"]}}</p>
     </div>
-    <div class="container w3-orange w3-center w3-margin" style="flex-grow:1;">
+    <div class="container w3-center w3-margin" style="flex-grow:1; background-color:{{players[1]['color']}}">
       <p class="w3-xlarge"><b>{{players[1]["name"]}}</b></p>
       <p class="w3-xlarge"><i class="fa fa-star"> {{players[1]["stars"]}}</i></p>
       <p class="w3-xlarge">{{players[1]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
@@ -27,7 +28,7 @@
       <p class="w3-large">{{players[1]["message"]}}</p>
       <p class="w3-large">{{players[1]["done"]}}</p>
     </div>
-    <div class="container w3-indigo w3-center w3-margin" style="flex-grow:1;">
+    <div class="container w3-center w3-margin" style="flex-grow:1; background-color:{{players[2]['color']}}">
       <p class="w3-xlarge"><b>{{players[2]["name"]}}</b></p>
       <p class="w3-xlarge"><i class="fa fa-star"> {{players[2]["stars"]}}</i></p>
       <p class="w3-xlarge">{{players[2]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
@@ -35,7 +36,7 @@
       <p class="w3-large">{{players[2]["message"]}}</p>
       <p class="w3-large">{{players[2]["done"]}}</p>
     </div>
-    <div class="container w3-cyan w3-center w3-margin" style="flex-grow:1;">
+    <div class="container w3-center w3-margin" style="flex-grow:1; background-color:{{players[3]['color']}}">
       <p class="w3-xlarge"><b>{{players[3]["name"]}}</b></p>
       <p class="w3-xlarge"><i class="fa fa-star"> {{players[3]["stars"]}}</i></p>
       <p class="w3-xlarge">{{players[3]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
@@ -43,7 +44,7 @@
       <p class="w3-large">{{players[3]["message"]}}</p>
       <p class="w3-large">{{players[3]["done"]}}</p>
     </div>
-    <div class="container w3-amber w3-center w3-margin" style="flex-grow:1;">
+    <div class="container w3-center w3-margin" style="flex-grow:1; background-color:{{players[4]['color']}}">
       <p class="w3-xlarge"><b>{{players[4]["name"]}}</b></p>
       <p class="w3-xlarge"><i class="fa fa-star"> {{players[4]["stars"]}}</i></p>
       <p class="w3-xlarge">{{players[4]["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:28px" alt="Coin"></p>
