--- a/website/templates/Jeu4-reveal.html
+++ b/website/templates/Jeu4-reveal.html
@@ -6,8 +6,8 @@
       <h3><b>{{players[0]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[0]["choix"]] == "star" %}
-          {% if i == 3 %}
-            <div class="w3-xlarge w3-padding w3-margin w3-text-light-grey" style="white-space:nowrap; background-color:{{players[0]['secColor']}}"><i class="fa fa-star"></i></div>
+          {% if [players[0]["choix"] == 3 %}
+            <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[0]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[0]['secColor']}}"><i class="fa fa-star"></i></div>
           {% endif %}
@@ -20,8 +20,8 @@
       <h3><b>{{players[1]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[1]["choix"]] == "star" %}
-          {% if i == 3 %}
-            <div class="w3-xlarge w3-padding w3-margin w3-text-light-grey" style="white-space:nowrap; background-color:{{players[1]['secColor']}}"><i class="fa fa-star"></i></div>
+          {% if [players[1]["choix"] == 3 %}
+            <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[1]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[1]['secColor']}}"><i class="fa fa-star"></i></div>
           {% endif %}
@@ -36,8 +36,8 @@
       <h3><b>{{players[2]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[2]["choix"]] == "star" %}
-          {% if i == 3 %}
-            <div class="w3-xlarge w3-padding w3-margin w3-text-light-grey" style="white-space:nowrap; background-color:{{players[2]['secColor']}}"><i class="fa fa-star"></i></div>
+          {% if [players[2]["choix"] == 3 %}
+            <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[2]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[2]['secColor']}}"><i class="fa fa-star"></i></div>
           {% endif %}
@@ -50,8 +50,8 @@
       <h3><b>{{players[3]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[3]["choix"]] == "star" %}
-          {% if i == 3 %}
-            <div class="w3-xlarge w3-padding w3-margin w3-text-light-grey" style="white-space:nowrap; background-color:{{players[3]['secColor']}}"><i class="fa fa-star"></i></div>
+          {% if [players[3]["choix"] == 3 %}
+            <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[3]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[3]['secColor']}}"><i class="fa fa-star"></i></div>
           {% endif %}
@@ -66,8 +66,8 @@
       <h3><b>{{players[4]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[4]["choix"]] == "star" %}
-          {% if i == 3 %}
-            <div class="w3-xlarge w3-padding w3-margin w3-text-light-grey" style="white-space:nowrap; background-color:{{players[4]['secColor']}}"><i class="fa fa-star"></i></div>
+          {% if [players[4]["choix"] == 3 %}
+            <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[4]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[4]['secColor']}}"><i class="fa fa-star"></i></div>
           {% endif %}
