boutton partager + animations

--- a/website/templates/Jeu5-reveal.html
+++ b/website/templates/Jeu5-reveal.html
@@ -1,6 +1,6 @@
 {% extends "bese.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
 
-<div class="w3-display-middle w3-center" style="width:500px;">
+<div class="w3-display-middle w3-center w3-text-white" style="width:500px;">
   <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>{{user['message']}}</h4>
   </header>
