--- a/website/templates/title.html
+++ b/website/templates/title.html
@@ -1,6 +1,6 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
 
-<div class="w3-card-4 w3-display-middle w3-center" style="width:400px; background-color:{{secondary_theme_color}}">
+<div class="w3-card-4 w3-display-middle w3-center animate__animated animate__zoomIn" style="width:400px; background-color:{{secondary_theme_color}}">
   <div class="w3-container w3-margin w3-text-white" style="background-color:{{theme_color}}">
     {% if background == "10.jpg" %}
       <h1>Premier jeu</h1>
