--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,26 +8,55 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <style>
-    body {
-      background-image: url({{url_for('static', filename="images/"+background)}});
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-    .circle {
-       border-radius: 50%;
-       width: 55px;
-       height: 55px;
-     }
+  <style>
+  body {
+    background-image: url({{url_for('static', filename="images/"+background)}});
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .circle {
+     border-radius: 50%;
+     width: 55px;
+     height: 55px;
+   }
 
-     .w3-lobster {
-       font-family: "Lobster", serif;
-     }
+   .w3-lobster {
+     font-family: "Lobster", serif;
+   }
 
-     body, h1, h2, h3, h4, h5, h6  {
-       font-family: 'Baloo 2', cursive;
-     }
+   body, h1, h2, h3, h4, h5, h6  {
+     font-family: 'Baloo 2', cursive;
+   }
+
+   .flip-card {
+    perspective: 1000px;
+  }
+
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+  .flip-card-back {
+    transform: rotateY(180deg);
+  }
 
     </style>
     <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type = "image/x-icon">
@@ -39,21 +68,23 @@
     <h3 class="w3-right w3-xxlarge">{{user["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:32px" alt="Coin"></h3>
   </div>
 
+  <div class="w3-display-bottommiddle" style="width:100%;">
   {% with messages = get_flashed_messages(with_categories=true) %} {% if
-   messages %} {% for category, message in messages %} {% if category ==
-   'error' %}
-    <div class="w3-panel w3-pale-red w3-round-large w3-border w3-border-red w3-center w3-display-container animate__lightSpeedInRight" style="position: absolute; width:90%; bottom:15px; left:5%;">
+   messages %} {% for category, message in messages %}
+   {% if category == 'error' %}
+    <div class="w3-panel w3-pale-red w3-round-large w3-border w3-border-red w3-center w3-display-container w3-margin w3-large w3-padding" style="display:flex; justify-content:space-around;">
       <i class="fa fa-exclamation-circle w3-display-left w3-xlarge w3-text-red w3-margin-left"></i>
       <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-      <h4>{{ message }}</h4>
+      <div style="width:85%">{{ message }}</div>
     </div>
    {% else %}
-   <div class="w3-panel w3-pale-green w3-round-large w3-border w3-border-green w3-center w3-display-container" style="position: absolute; width:90%; bottom:15px; left:5%;">
+   <div class="w3-panel w3-pale-green w3-round-large w3-border w3-border-green w3-center w3-display-container w3-margin w3-large w3-padding" style="display:flex; justify-content:space-around;">
      <i class="fa fa-info-circle w3-display-left w3-xlarge w3-text-green w3-margin-left"></i>
      <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-     <h4>{{ message }}</h4>
+     <div style="width:85%">{{ message }}</div>
    </div>
    {% endif %} {% endfor %} {% endif %} {% endwith %}
+   </div>
 
  {% block inside %} {% endblock %}
 
