--- a/website/templates/Jeu5-proposition.html
+++ b/website/templates/Jeu5-proposition.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 <p>
-<button type="submit" name="boutton" value="proposition" class="w3-button w3-teal">Faire une proposition</button>
+<button type="submit" name="boutton" value="proposition" class="w3-button" style="background-color:{{theme_color}}">Faire une proposition</button>
 <p>
 </form>
 
