--- a/website/templates/Jeu5-reveal.html
+++ b/website/templates/Jeu5-reveal.html
@@ -1,4 +1,4 @@
-{% extends "bese.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
+{% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
 
 <div class="w3-display-middle w3-center w3-text-white" style="width:500px;">
   <header class="w3-container" style="background-color:{{theme_color}}">
@@ -54,7 +54,7 @@
   </div>
   <div class="w3-container w3-center">
       <form method="POST">
-        <button type="submit" class="w3-btn w3-xlarge w3-teal w3-padding" name="boutton" value="nouvelle proposition">Faire une nouvelle proposition</button>
+        <button type="submit" class="w3-btn w3-xlarge w3-padding" name="boutton" value="nouvelle proposition" style="background-color:{{theme_color}}">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
