--- a/website/templates/Jeu4-reveal.html
+++ b/website/templates/Jeu4-reveal.html
@@ -6,7 +6,7 @@
       <h3><b>{{players[0]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[0]["choix"]] == "star" %}
-          {% if [players[0]["choix"] == 3 %}
+          {% if players[0]["choix"] == 3 %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[0]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[0]['secColor']}}"><i class="fa fa-star"></i></div>
@@ -20,7 +20,7 @@
       <h3><b>{{players[1]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[1]["choix"]] == "star" %}
-          {% if [players[1]["choix"] == 3 %}
+          {% if players[1]["choix"] == 3 %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[1]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[1]['secColor']}}"><i class="fa fa-star"></i></div>
@@ -36,7 +36,7 @@
       <h3><b>{{players[2]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[2]["choix"]] == "star" %}
-          {% if [players[2]["choix"] == 3 %}
+          {% if players[2]["choix"] == 3 %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[2]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[2]['secColor']}}"><i class="fa fa-star"></i></div>
@@ -50,7 +50,7 @@
       <h3><b>{{players[3]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[3]["choix"]] == "star" %}
-          {% if [players[3]["choix"] == 3 %}
+          {% if players[3]["choix"] == 3 %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[3]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[3]['secColor']}}"><i class="fa fa-star"></i></div>
@@ -66,7 +66,7 @@
       <h3><b>{{players[4]["name"]}}</b></h3>
       <div class="w3-display-container" style="height:50px;">
         {% if page['prize'][gameState["game4_bonus"]][players[4]["choix"]] == "star" %}
-          {% if [players[4]["choix"] == 3 %}
+          {% if players[4]["choix"] == 3 %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-light-gray" style="white-space:nowrap; background-color:{{players[4]['secColor']}}"><i class="fa fa-star"></i></div>
           {% else %}
             <div class="w3-xlarge w3-padding w3-margin w3-text-white" style="white-space:nowrap; background-color:{{players[4]['secColor']}}"><i class="fa fa-star"></i></div>
