--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -42,9 +42,6 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
 
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
 
   .flip-card-front, .flip-card-back {
     position: absolute;
@@ -65,26 +62,26 @@
 
 <body>
   <div class="w3-container w3-text-white" style="height:72px; background-color:{{theme_color}}">
-    <h3 class="w3-right w3-xxlarge">{{user["flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:32px" alt="Coin"></h3>
+    <h3 class="w3-right w3-xxlarge"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:32px" alt="Coin"></h3>
   </div>
 
-  <div class="w3-display-bottommiddle" style="width:100%;">
+  <div id="messages" class="w3-display-bottommiddle w3-padding">
   {% with messages = get_flashed_messages(with_categories=true) %} {% if
    messages %} {% for category, message in messages %}
-   {% if category == 'error' %}
-    <div class="w3-panel w3-pale-red w3-round-large w3-border w3-border-red w3-center w3-display-container w3-margin w3-large w3-padding" style="display:flex; justify-content:space-around;">
-      <i class="fa fa-exclamation-circle w3-display-left w3-xlarge w3-text-red w3-margin-left"></i>
-      <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-      <div style="width:85%">{{ message }}</div>
+    {% if category == 'error' %}
+    <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
+      <i class="fa fa-exclamation-circle w3-large w3-text-red w3-margin-right"></i>
+      <div class="w3-center">{{ message }}</div>
+      <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
     </div>
-   {% else %}
-   <div class="w3-panel w3-pale-green w3-round-large w3-border w3-border-green w3-center w3-display-container w3-margin w3-large w3-padding" style="display:flex; justify-content:space-around;">
-     <i class="fa fa-info-circle w3-display-left w3-xlarge w3-text-green w3-margin-left"></i>
-     <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-     <div style="width:85%">{{ message }}</div>
+    {% else %}
+   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
+     <i class="fa fa-info-circle w3-large w3-text-green w3-margin-right"></i>
+     <div class="w3-center">{{ message }}</div>
+     <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
    </div>
-   {% endif %} {% endfor %} {% endif %} {% endwith %}
-   </div>
+  {% endif %} {% endfor %} {% endif %} {% endwith %}
+  </div>
 
  {% block inside %} {% endblock %}
 
@@ -95,15 +92,32 @@
         socket.emit('give_identity', '{{user["name"]}}');
     });
     socket.on('message', function(msg) {
-        document.body.innerHTML += `
-  <div class="w3-panel w3-pale-green w3-round-large w3-border w3-border-green w3-center w3-display-container" style="position: absolute; width:90%; bottom:15px; left:5%;">
-    <i class="fa fa-info-circle w3-display-left w3-xlarge w3-text-green w3-margin-left"></i>
-    <span onclick="this.parentElement.style.display=\'none\'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-    <h4>` + msg + `</h4>
+        document.getElementById('messages').innerHTML += `
+  <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
+    <i class="fa fa-info-circle w3-large w3-text-green w3-margin-right"></i>
+    <div class="w3-center">` + msg + `</div>
+    <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
   </div>
 `;
     });
-    socket.on('changed', function() {
+    socket.on('waiting_count', function(count) {
+        document.getElementById('count').innerHTML = count;
+    });
+    socket.on('update_data', function(changes) {
+      for (i = 0; i < changes.length; i++) {
+        object_id = changes[i][0];
+        value = changes[i][1];
+        var obj = document.getElementById(object_id);
+        if (obj != null) { obj.innerHTML = value; }
+      }
+    });
+    socket.on('reveal_card', function(card_id) {
+        var card = document.getElementById('card' + card_id);
+        if (card != null) {
+          card.style.transform = "rotateY(180deg)";
+        }
+    });
+    socket.on('refresh', function() {
         window.location = window.location;
     });
 
