--- a/website/templates/en_attente_jeu5.html
+++ b/website/templates/en_attente_jeu5.html
@@ -2,7 +2,7 @@
 
 <div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-display-container w3-display-middle w3-padding">
   <h5>En attente des autres joueurs</h5>
-  <h4>{{done}} / 4</h4>
+  <h4 id="count">{{done}} / 4</h4>
 </div>
 
 {% endblock %}
