--- a/website/templates/partager.html
+++ b/website/templates/partager.html
@@ -6,9 +6,9 @@
   </header>
   <form class="w3-container w3-large" method="POST">
   {% for i in range(4) %}
-  <div class="w3-row w3-margin-top" style="background-color:{{players[user['otherPlayers'][i]]['color']}}">
-    <div class="w3-col w3-padding" style="width:120px;"><b>{{players[user['otherPlayers'][i]]["name"]}}</b></div>
-    <div class="w3-rest"><input id={{i}} onchange="myFunction()" name={{players[user['otherPlayers'][i]]["name"]}} class="w3-input w3-border w3-round-large w3-center" value={{user['gain_a_partager']//5}} type="number" style="width:107px; height:35px; position:absolute; top:{{i*59+70}}px;"></div>
+  <div class="w3-row w3-margin-top" style="background-color:{{user['otherPlayers'][i]['color']}}">
+    <div class="w3-col w3-padding" style="width:120px;"><b>{{user['otherPlayers'][i]["name"]}}</b></div>
+    <div class="w3-rest"><input id={{i}} onchange="update_rest()" name={{user['otherPlayers'][i]["name"]}} class="w3-input w3-border w3-round-large w3-center" value={{user['gain_a_partager']//5}} type="number" style="width:107px; height:35px; position:absolute; top:{{i*59+70}}px;"></div>
   </div>
   {% endfor %}
   <div class="w3-row w3-margin-top" style="background-color:{{user['color']}}">
@@ -30,8 +30,8 @@
   document.getElementById('1').value = Math.floor(total/5)
   document.getElementById('2').value = Math.floor(total/5)
   document.getElementById('3').value = Math.floor(total/5)
-  myFunction()
-  function myFunction() {
+  update_rest()
+  function update_rest() {
     document.getElementById('rest').innerHTML = total -
                                                     document.getElementById('0').value -
                                                     document.getElementById('1').value -
